fix posts > dossiers fix masculing > masculin; feminim > feminin some html/css for spacing, font, bio, team, link, chevron sections

--- a/themes/default/css/custom_font.css
+++ b/themes/default/css/custom_font.css
@@ -7,27 +7,6 @@
 
 @font-face {
     font-family: 'proxima-nova';
-    src: url('../fonts/ProximaNova/ProximaNova-RegIt.otf');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'proxima-nova';
-    src: url('../fonts/ProximaNova/ProximaNova-Light.otf');
-    font-weight: 200;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'proxima-nova';
-    src: url('../fonts/ProximaNova/ProximaNova-LightIt.otf');
-    font-weight: 200;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'proxima-nova';
     src: url('../fonts/ProximaNova/ProximaNova-Bold.otf');
     font-weight: bold;
     font-style: normal;
@@ -39,19 +18,9 @@
     font-weight: bold;
     font-style: italic;
 }
-
 @font-face {
     font-family: 'proxima-nova';
-    src: url('../fonts/ProximaNova/ProximaNova-Thin.otf');
-    font-weight: lighter;
+    src: url('../fonts/ProximaNova/ProximaNova-Black.otf');
+    font-weight: 900;
     font-style: normal;
 }
-
-@font-face {
-    font-family: 'proxima-nova';
-    src: url('../fonts/ProximaNova/ProximaNova-ThinIt.otf');
-    font-weight: lighter;
-    font-style: italic;
-}
-
-
