--- a/themes/default/css/main_overwrite.less
+++ b/themes/default/css/main_overwrite.less
@@ -1,5 +1,6 @@
 @import "./mixins.less";
 
+@mainTextColor: #586377;
 ul, ul li {
   display: block;
   padding: 0;
@@ -49,7 +50,7 @@ time {
   transform: translate(-50%, 0);
   margin: auto;
   display: block;
-  color: #9EA4B0;
+  color: black;
 }
 
 .topText > div {
@@ -184,7 +185,7 @@ time {
 
   }
   .underHeadline {
-    color: #989898;
+    color: black;
     font-size: inherit;
     line-height: inherit;
   }
@@ -206,7 +207,7 @@ nav {
 }
 
 .bigText {
-  margin: 15px auto;
+  .smallSectionSeparation;
   ul {
     text-align: center;
     font-size: 40px;
@@ -216,7 +217,7 @@ nav {
 }
 
 .listOfPostsContainer {
-  margin: auto;
+  .mediumSectionSeparation;
   width: 75%;
   @media (max-width: 800px) {
     width: 90%;
@@ -232,18 +233,106 @@ nav {
 
 .listOfPosts {
   margin: 0 35px;
-  font-size: 17px;
+  .classicTextRules;
   ul {
     margin: 10px 0;
   }
 }
 
 .colTitle {
-  font-weight: normal;
+  .classicTextRules;
   margin-bottom: 15px;
 }
 
 .listTitle {
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+
+.bio {
+  .mediumSectionSeparation;
+  padding: 0 60px;
+  .classicTextRules;
+  .mainBio {
+    .titleTextRules;
+    margin: 10px 0;
+  }
+  .bioPicture {
+    padding-top: 10px;
+    img {
+      display: block;
+      width: 39%;
+      margin: auto;
+      min-width: 250px;
+    }
+  }
+}
+
+.link {
+  .classicTextRules;
+  font-weight: bold;
+  &, &:hover, &:before, &:before:hover {
+    color: @mainTextColor;
+  }
+}
+
+.pre-chevron {
+  &:before {
+    content: '>';
+    .classicTextRules;
+    margin: 0 10px 0 0;
+    font-weight: 900;
+  }
+}
+
+
+.team {
+  .mediumSectionSeparation;
+  .title {
+    .classicTextRules;
+    .smallSectionSeparation;
+    text-align: center;
+  }
+  .row {
+    margin: 0;
+  }
+  .peopleDesc {
+    padding: 20px 70px;
+  }
+  .job {
+    .classicTextRules;
+    text-align: center;
+  }
+  .people {
+    .titleTextRules;
+    text-align: center;
+    font-weight: bold;
+  }
+}
+
+/**
+ *  MAIN RULES MIXINS
+ */
+.classicTextRules {
+  font-size: 17px;
+  line-height: 25px;
+  color: @mainTextColor;
+  font-weight: normal;
+  text-align: left;
+  text-decoration: none;
+  letter-spacing: 1px;
+}
+
+.titleTextRules {
+  .classicTextRules;
+  font-size: 24px;
+  line-height: 31px;
+}
+
+.mediumSectionSeparation {
+  margin: 120px auto !important;
+}
+
+.smallSectionSeparation {
+  margin: 30px auto !important;
 }
